dia-9/app.ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas-ingress-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /giropops-senhas
            pathType: Prefix
            backend:
              service:
                name: giropops-senhas
                port:
                  number: 5000
